--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				</div>
 				<div class="elementor-element elementor-element-bf16865 elementor-widget elementor-widget-html" data-id="bf16865" data-element_type="widget" data-widget_type="html.default">
 				<div class="elementor-widget-container">
-			<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="./index_files/460717545.html" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Guia do score"></iframe></div><script src="./index_files/player.js.download"></script>		</div>
+			<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="./index_files/index.html" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Guia do score"></iframe></div><script src="./index_files/player.js.download"></script>		</div>
 				</div>
 				<div class="elementor-element elementor-element-5c5ff71 elementor-align-center scale-up-center elementor-widget elementor-widget-button" data-id="5c5ff71" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
